--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,10 @@ body {
   background-color: black;
   display: flex;
   justify-content: center;
+  align-items: center;
   font-family: "Caveat Brush";
+  height: 100vh;
+  overflow: auto;
 }
 
 .title {
@@ -26,14 +29,18 @@ body {
 .GameBox {
   height: 70vh;
   width: 90vw;
+  max-height: 100vh;  /* 最大高度为视口高度 */
+  max-width: 100vw;   /* 最大宽度为视口宽度 */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-sizing: border-box; /* 确保内容在边框内 */
 }
 
 .GameRow {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
 }
 
 
@@ -66,4 +73,15 @@ body {
   padding-left: 9px;
 }
 
-
+.taiko-node {
+  width: calc(100% / var(--node-count) - 20px);
+  height: calc(100% / var(--node-count) - 20px);
+  max-width: 40px;  
+  max-height: 40px;
+  border-radius: 50%;
+  background-color: white;
+  margin: 5px;
+  cursor: pointer;
+  border: 2px solid black;
+  transition: all 0.5s ease;
+}
