--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,7 @@ body {
   font-family: "Caveat Brush";
   height: 100vh;
   overflow: auto;
+  color: white;
 }
 
 .title {
@@ -31,7 +32,7 @@ body {
   max-height: 100vh;  /* 最大高度为视口高度 */
   max-width: 100vw;   /* 最大宽度为视口宽度 */
   display: flex;
-  margin-top: 20px;
+  margin-top: 40px;
   flex-direction: column;
   justify-content: space-between;
   box-sizing: border-box; /* 确保内容在边框内 */
@@ -74,10 +75,10 @@ body {
 }
 
 .taiko-node {
-  width: calc(100% / var(--node-count) - 40px);
-  height: calc(100% / var(--node-count) - 40px);
-  max-width: 20px;  
-  max-height: 20px;
+  width: calc(100% / var(--node-count) - 20px);
+  height: calc(100% / var(--node-count) - 20px);
+  max-width: 30px;  
+  max-height: 30px;
   border-radius: 50%;
   background-color: white;
   margin: 5px;
