--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,15 +27,13 @@ body {
 
 
 .GameBox {
-  height: 70vh;
+  height: 95vh;
   width: 90vw;
-  max-height: 100vh;  /* 最大高度为视口高度 */
-  max-width: 100vw;   /* 最大宽度为视口宽度 */
+  gap: 350px;
   display: flex;
-  margin-top: 40px;
   flex-direction: column;
-  justify-content: space-between;
-  box-sizing: border-box; /* 确保内容在边框内 */
+  justify-content: center;
+
 }
 
 .GameRow {
