progress bar color

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,7 +99,7 @@ body {
 
 .progress-bar-container {
   width: 20%;
-  background-color: #ddd;
+  background-color: #837b7b;
   border-radius: 5px;
   margin: 20px 0;
   overflow: hidden;
