--- a/client/src/components/ProgressBar/progressBar.css
+++ b/client/src/components/ProgressBar/progressBar.css
@@ -1,3 +1,16 @@
+.tooltip {
+  position: absolute;
+  padding: 10px;
+  background-color: #333;
+  border-radius: 8px;
+  color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+  line-height: 1.4;
+  width: 150px; /* Adjust as needed */
+  height: 85px;
+}
+
 .progress-bar-container {
     width: 20%;
     background-color: #837b7b;
